k8s/nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kafka
  namespace: kafka
  annotations: #{}
    cert-manager.io/issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"  
spec:
  ingressClassName: kafka
  tls:
  - hosts:
    - velokafka.westus2.cloudapp.azure.com
    secretName: kafka-tls
  rules:
  - host: velokafka.westus2.cloudapp.azure.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web-nginx
            port:
              number: 80
